<resources>
    <string name="app_name">MissionIndradhanush</string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="channel_name">notification</string>
    <string name="channel_description">Vaccine</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_vaccine_detail">VaccineDetail</string>
    <string name="section_format">Hello World from section: %1$d</string>


    <string name="email">Email@example.com</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot">Forgot password?</string>
    <string name="account">Donot have an account?</string>
    <string name="signup">Sign Up</string>

</resources>
