<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.hackathon.missionindradhanush.LoginActivity"
    android:background="@drawable/main">

      <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_above="@+id/editTextEmail"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="12dp"
        android:src="@drawable/logo"
        android:id="@+id/imageView2" />

    <EditText
        android:id="@+id/editTextEmail"
        android:layout_width="260dp"
        android:layout_height="60dp"

        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:ems="10"
        android:gravity="center_horizontal"
        android:hint="@string/email"
    android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="260dp"
        android:layout_height="60dp"
        android:layout_alignStart="@+id/editTextEmail"
        android:layout_below="@+id/editTextEmail"
        android:layout_marginTop="31dp"
        android:ems="10"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:hint="@string/password"
        android:gravity="center_horizontal"
        android:inputType="textPassword"
        />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="40dp"
        android:layout_height="50dp"
        android:layout_alignStart="@+id/editTextEmail"
        android:layout_alignTop="@+id/editTextEmail"
        app:srcCompat="@drawable/user"
        />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_alignStart="@+id/editTextPassword"
        android:layout_alignTop="@+id/editTextPassword"
        app:srcCompat="@drawable/lock"
        />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextPassword"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="24dp"

        android:text="@string/login" />
    <TextView
        android:id="@+id/forgotpassword"
        android:layout_width="120dp"
        android:layout_height="30dp"
        android:layout_alignEnd="@+id/imageView2"
        android:layout_below="@+id/button"
        android:clickable="true"
        android:text="@string/forgot"
        />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/editTextEmail"
        android:layout_alignParentTop="true"
        android:layout_marginTop="18dp"
        android:text="@string/account" />

    <TextView
        android:id="@+id/signup"
        android:layout_width="60dp"
        android:layout_height="30dp"

        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_toEndOf="@+id/editTextEmail"
        android:text="@string/signup"
        android:layout_marginTop="30dp"
        android:textStyle="bold"
        android:clickable="true"/>

</RelativeLayout>

